--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ repositories {
         url = 'https://papermc.io/repo/repository/maven-public/'
     }
     maven {
+        name = 'spigotmc-repo'
+        url = 'https://hub.spigotmc.org/nexus/content/groups/public/'
+    }
+    maven {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
@@ -42,8 +46,8 @@ processResources {
 }
 buildscript {
     ext{
-        kotlin_version = '1.4.31'
-        spigot_version = '1.16.3-R0.1-SNAPSHOT'
+        kotlin_version = '1.3.61'
+        spigot_version = '1.16.4-R0.1-SNAPSHOT'
     }
     repositories {
         mavenCentral()
@@ -59,4 +63,7 @@ jar {
             it.isDirectory() ? it : zipTree(it)
         }
     }
+}
+dependencies {
+    file("lib/spigot-1.16.4.jar")
 }
